--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
   "bugs": {
     "url": "https://github.com/AbboDev/golarion-scraper/issues"
   },
-  "homepage": "https://github.com/AbboDev/golarion-scraper#readme"
+  "homepage": "https://github.com/AbboDev/golarion-scraper#readme",
+  "devDependencies": {
+    "axios": "^1.6.8",
+    "cheerio": "^1.0.0-rc.12"
+  }
 }
